# 1122_DesignThinking_CatLens

./: README.md  cat_intro.csv  pyproject.toml  訓練.ipynb
.devcontainer/: devcontainer-lock.json  devcontainer.json
inceptionv3/: inceptionv3_tree.ipynb  inceptionv3_tree_runtime.py
