[tool.poetry]
name = "cat"
version = "0.1.0"
description = ""
authors = ["timsu92 <33785401+timsu92@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = { version = "^2.3.0", source="torch" }
torchvision = { version = "^0.18.0", source="torch" }
torchaudio = { version = "^2.3.0", source="torch" }
matplotlib = "^3.9.0"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
gradio = "^4.32.2"
pandas = "^2.2.2"
playwright = "^1.44.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
